# Indian-Gov-Scheme-Eligibility

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Procfile  README.md  SEO_SETUP.md  Scheme_Checker_Project_Blueprint.docx  pyproject.toml  render.yaml  requirements.txt  vercel.json
.claude/: settings.json
.github/workflows/: ci.yml  keep-alive.yml  sync-schemes.yml
api/: index.py  requirements.txt
data/: schemes_central.json  schemes_gujarat.json  schemes_maharashtra.json  schemes_rajasthan.json  schemes_uttar_pradesh.json
frontend/: index.html
src/scheme_checker/: __init__.py  admin.py  analytics.py  api.py  cli.py  core.py  db.py  schema.py  schemes.py  store.py  web.py
src/scheme_checker/sync/: __init__.py  diff.py  normalize.py  run.py  sources.py
templates/: base.html  list.html  privacy.html  scheme.html
templates/admin/: analytics.html  base.html  login.html  overview.html  scheme_form.html  schemes.html  visitors.html
tests/: test_admin.py  test_analytics.py  test_api.py  test_cli.py  test_core.py  test_data.py  test_db.py  test_normalize.py  test_schema.py  test_sources.py  test_sync_pipeline.py  test_web.py
