[tool.poetry]
name = "scheme-checker"
version = "0.1.0"
description = "Eligibility checker for Indian government schemes (scaffold)"
authors = ["You <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
