[tool.poetry]
name = "scheme-checker"
version = "0.2.0"
description = "Indian Government Scheme Eligibility Checker — FastAPI + multilingual web frontend"
authors = ["Pavitra Bhatt <PavitraBhatt@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.110.0"
uvicorn = {version = ">=0.29.0", extras = ["standard"]}
pydantic = ">=2.0.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.0"
httpx = ">=0.27.0"

[tool.poetry.scripts]
scheme-check = "scheme_checker.cli:main"
scheme-api = "scheme_checker.api:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
# E/F: pyflakes+pycodestyle, I: isort, UP: pyupgrade, B: bugbear, C4: comprehensions
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]  # line length handled by the formatter
